scrapcore_serialization_macro/src/snapshots/scrapcore_serialization_macro__tests__registry_tests@conflict_singleton_collection.rs.snap
---
source: scrapcore_serialization_macro/src/tests.rs
expression: check_registry(path)
input_file: scrapcore_serialization_macro/src/test_cases/registry/conflict_singleton_collection.rs
---
#[registry(error = "ModelError")]
pub enum Model {
    #[model(singleton, collection)]
    Test(A),
}
::core::compile_error! {
    "Only one of `asset`, `collection`, or `singleton` markers can be present at once"
}
