scrapcore_serialization_macro/src/snapshots/scrapcore_serialization_macro__tests__registry_tests@conflict_singleton_collection_asset.rs.snap
---
source: scrapcore_serialization_macro/src/tests.rs
expression: check_registry(path)
input_file: scrapcore_serialization_macro/src/test_cases/registry/conflict_singleton_collection_asset.rs
---
#[registry(error = ModelError)]
pub struct Model {
    #[model(singleton, collection, asset)]
    test: A,
}
::core::compile_error! {
    "`asset` conflicts with mutually exclusive `collection`"
}
